--- a/style.scss
+++ b/style.scss
@@ -152,3 +152,25 @@ header {
         cursor: pointer;
     }
 }
+
+
+@media (max-width: 800px) {
+    body {
+        height: unset;
+        padding: 5vh 0;
+    }
+    main {
+        flex-direction: column;
+    }
+    .input {
+
+        &__tip {
+            &-grid {
+                grid-template-columns: auto auto auto;
+                &-item {
+                    width: auto;
+                }
+            }
+        }
+    }
+}
